Added variables to home icon

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -80,6 +80,14 @@ body
 /*********************************************************
 *  ICON STYLING
 *********************************************************/
+.home-center
+{
+	position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -30%);
+}
+
 .square
 {
 	height: 8em;
