--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -13,8 +13,8 @@ $(".image-radio").click(function(){
 		<h2>Home<small> - student roster for teacher <%= @teacher.screen_name %></small></h2><!-- Dynamically fills in with school id -->
 	</div>
 	<div class="col-xs-1 pull-right">
-		<div class="header-sq i-plum" >
-			<span class="fa fa-apple fa-3x teacher-icon"></span>
+		<div class="header-sq i-<%= @teacher.color %>" >
+			<span class="fa fa-<%= @teacher.icon %> fa-3x teacher-icon"></span>
 		</div>
 	</div>
 </div><!--End page header-->
@@ -26,11 +26,11 @@ $(".image-radio").click(function(){
 			<div class="row students-row">
 		<% end %>
 		<div class="image-radio col-xs-3 text-center" id="<%= student.id %>">
-			<input name="student_roster" id="student<%= student.id %>" value="student<%= student.id %>" style="display:none" type="radio"/>
+			<input name="student_roster" id="student<%= student.id %>" value="student<%= student.id %>" style="display:none;" type="radio"/>
 			<label for="student<%= student.id %>">
-      <div class ="square i-<%= student.color %> center-block">
-          <span class="fa fa-<%= student.icon %> fa-5x student-icon "></span>
-      </div>
+	      <div class ="square i-<%= student.color %> center-block">
+	          <span class="fa fa-<%= student.icon %> fa-5x student-icon home-center"></span>
+	      </div>
       <p><span class="student-icon-text" id="<%= student.id %>"><%= student.full_name%></span></p>
       </label>
     </div>    <!-- col -->
