Fixed oversized icons, added icon indicators to squares on index scene

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -80,6 +80,7 @@ body
 /*********************************************************
 *  ICON STYLING
 *********************************************************/
+/*Solves centering issues on home and session pages*/
 .home-center
 {
 	position: absolute;
@@ -113,9 +114,7 @@ body
 	height: 8em;
 	width: 8em;
 	display: flex;
-	flex-flow:column;
-	align-items: center;
-	justify-content: center;
+	border-radius: 25px;
 }
 
 .sq-active
@@ -154,12 +153,10 @@ body
 
 .student-icon
 {
-	font-size: 5em;
 	color: #FFFFFF;
 }
 .teacher-icon
 {
-	font-size: 5em;
 	color: #FFFFFF;
 }
 .icon-white
