static super_report admin_report

--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -1,25 +1,4 @@
-<!-- Andy A and UX team -->
-	<nav class="navbar navbar-static-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="home1.html">Dinner Out</a>
-			</div>
-			<div id="navbar" class="collapse navbar-right navbar-collapse">
-				<ul class="nav navbar-nav ">
-					<li><a href="help1.html">Help</a></li>
-					<li><a href="admin1.html">Admin</a></li>
-				  <li><a href="teacher2.html">Profile</a></li>
-					<li><a href="logout1.html">Logout</a></li>
-				</ul>
-			</div>		<!-- end nav-collapse -->
-		</div>		
-	</nav>	<!-- end navbar -->
+<!-- Andy A and UX team  Edited by Robert Herrera -->
 
 <div class="container">
 	<div class="row">
@@ -50,7 +29,7 @@
 					<div class ="action-sq i-pink center-block" >
 						<a href="admin2.html"><span class="fa fa-file-text-o fa-4x action-icon" ></span></a>
 					</div>
-					<p><a href="admin2.html"><span class="student-icon-text">Admin report</span></a></p>
+					<p><form action='students/show'><span class="student-icon-text">Admin report</span></form></p>
 				</div> <!-- col -->
 			</div>   <!-- row -->
 
@@ -80,3 +59,4 @@
 		</div>   <!-- col -->
 	</div>   <!-- row -->
 </div>   <!-- container -->
+
