--- a/app/views/teachers/admin_report.html.erb
+++ b/app/views/teachers/admin_report.html.erb
@@ -1,15 +1,14 @@
-<!-- Andy A, UX team -->
 <div class="container">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 
 		<!-- page header -->
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
-				<h2>Super Report<small> - stats and more for the Super User</small></h2><!-- Dynamically fills in with school id -->
+				<h2>Admin Report<small> - stats and more about your school</small></h2><!-- Dynamically fills in with school id -->
 			</div>
 			<div class="col-xs-1 center-block">
-				<div class="header-sq i-red" title="Prof Bill is Super User">
-					<span class="fa fa-flash fa-3x teacher-icon"></span>
+				<div class="header-sq i-plum" title="Admin Bianca17">
+					<span class="fa fa-apple fa-3x teacher-icon"></span>
 				</div>
 			</div>
 		</div><!--End page header-->
@@ -18,17 +17,18 @@
 		<div class="row content-text">
 			<br>
 			<p>
-				Stats like how many schools, teachers, etc.
+				Stats like how many teachers, students, etc.
 				<br><br>
 			</p>
 			<p>
-				This is a table of info or a PDF report on the status of Dinner Out.
+				A table of info or a PDF report on the school.
 				<br><br>
 			</p>
 		
 			<!-- bottom padding for demo only -->
 			<p style="padding-bottom: 100px;"></p>
-		</div>   <!-- row -->
+
+		</div>   <!-- content-text -->
 
 	</div><!--End content col-->
 </div><!--End container-->
