--- a/app/views/session_notes/index.html.erb
+++ b/app/views/session_notes/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= session_note.created_at %></td>
         <td><%= link_to 'Show', session_note %></td>
         <td><%= link_to 'Edit', edit_session_note_path(session_note) %></td>
-        <td><%= link_to 'Destroy', session_note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', session_note_path(session_note), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
