--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -7,7 +7,7 @@
   
   <!-- Dynamically fills in with school full name -->
 	<div class="col-xs-11">
-	    <h2>All Students<small> - manage students for school <%= @full_name %></small></h2>
+	    <h2>All Students<small> - manage students at school <%= @full_name %></small></h2>
 	</div>
 	
 	<!-- Dynamically fills in with school color, icon, and title of school -->
@@ -21,7 +21,7 @@
 
 <br>
 
-<!-- New Student Button, unable to next "+" symbol in button -->
+<!-- New Student Button -->
 <div class="row">
 	<div class="col-xs-3 col-xs-offset-1">
 		<form  action="/students/new.html">
@@ -29,8 +29,8 @@
 			  <i class="fa fa-plus-square-o"></i> New Student
 			</button>
 		</form>
-</div>   <!-- col -->
-
+  </div>   <!-- col -->
+</div>    <!-- row -->
 <!--Table Header -->
 <br>
 <table class="table table-striped table-hover table-responsive schools-table">
