Fix home page and add comments

--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -35,14 +35,16 @@
 			<div class="row students-row">
 		<% end %>
 
-		<div class="image-radio col-xs-3 text-center" id="<%= student.id %>">
+		<div class="col-xs-3 text-center">
 			<input name="student_roster" id="student<%= student.id %>" value="student<%= student.id %>" style="display:none;" type="radio"/>
 			<label for="student<%= student.id %>">
-	      <div class ="square i-<%= student.color %> center-block">
-	          <span class="fa fa-<%= student.icon %> fa-5x student-icon home-center"></span>
+				<div class="image-radio" id="<%= student.id %>">
+		      <div class ="square i-<%= student.color %> center-block">
+		          <span class="fa fa-<%= student.icon %> fa-5x student-icon home-center"></span>
+		      </div>
 	      </div>
-      <p><span class="student-icon-text" id="<%= student.id %>"><%= student.full_name%></span></p>
       </label>
+      <p><span class="student-icon-text" id="<%= student.id %>"><%= student.full_name%></span></p>
     </div>    <!-- col -->
 
     <% if index == 3 || index == 7 || index == (@top_students.size-1) %>
