Add teacher change passwords, still needs a few changes

--- a/app/views/teachers/edit_password.html.erb
+++ b/app/views/teachers/edit_password.html.erb
@@ -1,4 +1,6 @@
 <!--Adapted for use by Kevin M. -->
+<!--Edited further by Tommy B. -->
+
 <div class="page-header cap17-header vertical-align">
 	<div class="col-xs-11">
 		<h2>Change Password<small> - change password for teacher <%= @teacher.full_name %></small></h2>
@@ -29,7 +31,7 @@
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Current Password: </h4></div>
 		<div class="col-sm-4 col-sm-offset-0">
-			<!--<%= f.password_field :password, class: 'form-control', id: 'currPass' %>-->
+			<%= f.password_field :old_password, class: 'form-control', id: 'currPass' %>
 		</div>
 	</div>
 	
@@ -37,7 +39,7 @@
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>New Password: </h4></div>
 		<div class="col-sm-4 col-sm-offset-0">
-			<!--< %= f.password_field :password, class: 'form-control', id: 'newPass' %>-->
+			<%= f.password_field :password, class: 'form-control', id: 'newPass' %>
 		</div>
 	</div>
 	
@@ -45,13 +47,13 @@
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Confirm New Password: </h4></div>
 		<div class="col-sm-4 col-sm-offset-0">
-		<!--< %= f.password_field :password_confirmation, class: 'form-control', id: 'confPass' %>-->
+			<%= f.password_field :password_confirmation, class: 'form-control', id: 'confPass' %>
 		</div>
 	</div>
 	
 	<div class="row action-buttons-row">
 		<div class="col-sm-1 col-sm-offset-1"> 
-			<%= f.submit "Submit", class: "btn btn-success" %>
+			<%= f.submit "Update Password", class: "btn btn-success" %>
 		</div>
 <% end %>
 	<div class="col-sm-1 col-sm-offset-1"> 
