--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -1,4 +1,6 @@
 <!--Adapted for use by Kevin M. -->
+<!--Edited further by Tommy B. (add changing password implementation) -->
+
 <div class="page-header cap17-header vertical-align">
 	<div class="col-xs-11">
 		<h2>Teacher profile for <%= @teacher.full_name %></h2>
@@ -123,20 +125,16 @@
     		<span class="fa fa-child fa-4x student-icon">
 			<% end %>
 		</div>
-		<p><%= link_to teacher_path(@teacher.id) do %>
-    <span class="student-icon-text">Student Roster</span>
-		<% end %></p>
+			<p><%= link_to teacher_path(@teacher.id) do %>
+    		<span class="student-icon-text">Student Roster</span>
+			<% end %></p>
 	</div>
-	
-	
 	
 	<div class="col-xs-2 col-xs-offset-1 text-center" title="Change Password">
 		<div class ="action-sq i-navy center-block">
-			<a href="teacher5.html"><span class="fa fa-key fa-4x student-icon"></span></a>
+			<%= link_to edit_password_teacher_path(@teacher.id) do %><span class="fa fa-key fa-4x student-icon"></span><% end %></a>
 		</div>
-		<p><a href="teacher5.html"><span class="student-icon-text">Change Password</span></a></p>
+			<p><%= link_to edit_password_teacher_path(@teacher.id) do %><span class="student-icon-text">Change Password</span><% end %></a></p>
 	</div>
-	
-	<p>Note from Kevin M: Change password link doesn't work yet. Do /teachers/(id)/pword to see it.</p>
 	
 </div>
