--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,38 @@
 			<span class="icon-bar"></span>
 		</button>
 		<!--<a class="navbar-brand" href="">Dinner Out</a>-->
-		<%= link_to "Dinner Out", about1_path, class: "navbar-brand" %>
+		<%= link_to about1_path, class: "navbar-brand" do%>
+		<span class="glyphicon glyphicon-home"></span>
+  		Dinner Out
+		<% end %>
 	</div>
 	<div id="navbar" class="collapse navbar-right navbar-collapse">
-		
 		<ul class="nav navbar-nav ">
-			<li><a href="about1.html">About</a></li>
 			<% if logged_in? %>
-				<li><%= link_to 'Admin', admin_path %></li>
-				<li><%= link_to 'Profile', teachers_path %></li>
-				<li><%= link_to "Logout", logout_path %></li>
+				<li><a href="help1.html" title="Help!"><span class="fa fa-question-circle"></span> Help</a></li>
+				<li><a href="#"><span class="fa fa-superpowers"></span> Super</a></li>
+				
+				<!-- Note from Carolyn C: Navbar Icons mixed with Ruby on Rails: Source:http://stackoverflow.com/questions/4837824/can-i-use-a-link-to-to-generate-a-link-with-a-span-inside -->
+				<li><%= link_to admin_path :class =>"navIcon" do %>
+  				<span class="fa fa-font"></span>
+  				Admin
+				<% end %>
+				</li>
+				
+				<li><%= link_to teachers_path :class =>"navIcon" do %>
+				<span class="fa fa-user-circle"></span>
+  				Profile
+				<% end %>
+				</li>
+				
+				<li><%= link_to logout_path :class =>"navIcon" do %>
+				<span class="fa fa-sign-out"></span>
+  				Logout
+				<% end %>
+				</li>
+				
+			<% else %>
+				<li><a href="about1.html">About</a></li>
 			<% end %>
 		</ul>
 	</div>		<!-- end nav-collapse -->
