--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -133,6 +133,8 @@
 		<div class="col-sm-1 col-sm-offset-1"><br></div>
 	</div>
 	
+	<!--One button is in the form, one is out-- it's because the cancel button is
+	    just a link to return, while the add button is the submit.-->
 	<div class="row action-buttons-row">
 		<div class="col-sm-1 col-sm-offset-1"> 
 			<%= f.submit "Add New Teacher", class: "btn btn-success" %>
