--- a/app/views/session_notes/index.html.erb
+++ b/app/views/session_notes/index.html.erb
@@ -1,31 +1,44 @@
-<p id="notice"><%= notice %></p>
+<!-- page header -->
+<div class="page-header vertical-align">
+	<div class="col-xs-11">
+		<h2>Notes<small> - view all notes</small></h2>
+	</div>
+	<div class="col-xs-1 center-block">
+		<div class="header-sq i-plum" title="Bianca17">
+			<span class="fa fa-apple fa-3x teacher-icon"></span>
+		</div>
+	</div>
+</div><!--End page header-->
 
-<h1>Session Notes</h1>
+	<!--New Teacher Button-->
+<div class="row first-content-row">
+	<div class="col-xs-3">
+		<p><%= notice %></p>
+		<%= button_to "New Note", new_session_note_path,
+    :class => "col-sm-offset-1 btn btn-lg btn-success", :method => :get %>
+	</div><!--End col-->
+</div><!--End row -->
 
-<table>
-  <thead>
-    <tr>
-      <th>Note</th>
-      <th>Session</th>
-      <th>Created at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @session_notes.each do |session_note| %>
-      <tr>
-        <td><%= session_note.note %></td>
-        <td><%= session_note.session_id %></td>
-        <td><%= session_note.created_at %></td>
-        <td><%= link_to 'Show', session_note %></td>
-        <td><%= link_to 'Edit', edit_session_note_path(session_note) %></td>
-        <td><%= link_to 'Destroy', session_note_path(session_note), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+ <!--Teacher display area -->
+<table class="table table-striped table-hover session_note-responsive session_note-table">
+	<thead>
+		<tr>
+			<th>Note</th>
+		</tr>
+	</thead>
+	<tbody>
+	  <%= will_paginate%>
+			<% @session_notes.each do |session_note| %>
+				<tr data-link=<%= edit_session_note_path(session_note.note) %>>
+					<td>
+						<div class="table-sq i-plum" title="<%= session_note.id %>">
+						</div>
+					</td>
+					<td><p class="listText"><%= session_note.note %></p></td>
+					<td><p class="listText"><span></span></p>
+					</td>
+				</tr>
+			<% end %>
+		<%= will_paginate %>
+	</tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Session Note', new_session_note_path %>
