--- a/app/views/squares/new.html.erb
+++ b/app/views/squares/new.html.erb
@@ -1,14 +1,20 @@
 <!--Ricky Perez & Michael Loptien-->
-		<!-- page header -->
+
+<!-- Page Header -->
 <div class="page-header vertical-align">
+	
+  <!-- Dynamically fills in with school full name -->
 	<div class="col-xs-11">
-	  <h2>New Square<small> - add a new behavior square to school [SCHOOL NAME HERE]</small></h2><!-- Dynamically fills in with school id -->
+	  <h2>New Square<small> - add a new behavior square to school <%= @full_name %></small></h2>
 	</div>
+	
+	<!-- Dynamically fills in with school color, icon, and title of school -->
 	<div class="col-xs-1 center-block">
-		<div class="header-sq i-ltblue" title="Turning Pointe Autism Foundation">
-		  <span class="fa fa-home fa-3x teacher-icon"></span>
+		<div class="header-sq i-<%= @color %>" title="<%= @full_name%>">
+					<span class="fa fa-<%= @icon %> fa-3x teacher-icon"></span>
 		</div>
-  </div>
-</div><!--End page header-->
+	</div>
+</div>
+<!--End page header-->
 
 <%= render 'form', square: @square, isNew: true %>
