--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -20,16 +20,21 @@
 
 				<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit school attributes">
 					<div class ="action-sq i-navy center-block" >
-						<a href="school2.html"><span class="fa fa-home fa-4x action-icon" ></span></a>
+						<a href="school2.html">
+							<span class="fa fa-home fa-4x action-icon" ></span></a>
 					</div>
-					<p><a href="school2.html"><span class="student-icon-text">School profile</span></a></p>
+					<p><a href="school2.html"><span class="student-icon-text">
+						<%= link_to 'School Profile', edit_school_path(@current_teacher) %>
+					</span></a></p>
 				</div> <!-- col -->
 
 				<div class="col-xs-2 text-center" title="School stats and more">
 					<div class ="action-sq i-pink center-block" >
 						<a href="admin2.html"><span class="fa fa-file-text-o fa-4x action-icon" ></span></a>
 					</div>
-					<p><form action='students/show'><span class="student-icon-text">Admin report</span></form></p>
+					<p><form action='students/show'><span class="student-icon-text">
+						<%= link_to 'Super Report', super_report_path(@current_teacher) %>
+					</span></form></p>
 				</div> <!-- col -->
 			</div>   <!-- row -->
 
@@ -39,24 +44,31 @@
 					<div class ="action-sq i-red center-block" >
 						<a href="student1.html"><span class="fa fa-child fa-4x action-icon" ></span></a>
 					</div>
-					<p><a href="student1.html"><span class="student-icon-text">All students</span></a></p>
+					<p><a href="student1.html"><span class="student-icon-text">
+						<%= link_to 'All Students', students_path(@current_teacher) %>
+					</span></a></p>
 				</div> <!-- col -->
 
 				<div class="col-xs-2 text-center" title="View/edit all teachers">
 					<div class ="action-sq i-yellow center-block" >
 						<a href="teacher1.html"><span class="fa fa-apple fa-4x action-icon" ></span></a>
 					</div>
-					<p><a href="teacher1.html"><span class="student-icon-text">All teachers</span></a></p>
+					<p><a href="teacher1.html"><span class="student-icon-text">
+						<%= link_to 'All Teachers', teachers_path(@current_teacher) %>
+					</span></a></p>
 				</div> <!-- col -->
 
 				<div class="col-xs-2 text-center" title="View/edit all behavior squares">
 					<div class ="action-sq i-ltblue center-block" >
 						<a href="square1.html"><span class="fa fa-square-o fa-4x action-icon" ></span></a>
 					</div>
-					<p><a href="sqaure1.html"><span class="student-icon-text">All squares</span></a></p>
+					<p><a href="sqaure1.html"><span class="student-icon-text">
+						<%= link_to 'All Squares', roster_squares_path(@current_teacher) %>
+					</span></a></p>
 				</div> <!-- col -->
 
 		</div>   <!-- col -->
 	</div>   <!-- row -->
 </div>   <!-- container -->
+
 
