--- a/app/views/session_notes/index.html.erb
+++ b/app/views/session_notes/index.html.erb
@@ -1,3 +1,23 @@
+<script>
+$(function() {
+  
+  // contact form animations
+  $('#newNote').click(function() {
+    $('#newNoteForm').fadeToggle();
+  })
+  $(document).mouseup(function (e) {
+    var container = $("#newNoteForm");
+
+    if (!container.is(e.target) // if the target of the click isn't the container...
+        && container.has(e.target).length === 0) // ... nor a descendant of the container
+    {
+        container.fadeOut();
+    }
+  });
+  
+});
+</script>
+
 <!-- page header -->
 <div class="page-header vertical-align">
 	<div class="col-xs-11">
@@ -10,13 +30,17 @@
 	</div>
 </div><!--End page header-->
 
-<div class="row first-content-row">
-	<div class="col-xs-3">
-		<p><%= notice %></p>
-		<%= button_to "New Note", new_session_note_path,
-    :class => "col-sm-offset-1 btn btn-lg btn-success", :method => :get %>
-	</div><!--End col-->
-</div><!--End row -->
+<div id="newNote">New Note</div>
+
+<div id="newNoteForm">
+
+  <h1>Add a new Note</h1>  
+  <form action="session_notes" method: "POST">
+    <textarea placeholder="add notes" value="notes"></textarea>
+    <input class="formBtn" type="submit" />
+    <input class="formBtn" type="reset" />
+  </form>
+</div>
 
 <table class="table table-striped table-hover session_note-responsive session_note-table">
 	<thead>
