Implements the admin_report screen. Lookin Good!

--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -11,8 +11,8 @@
 
 
 			<!--School profile form -->
-			<form class="form-horizontal" action="allSchools.html">
-			  <%= form_for(@school, url: newSchool_path) do |f| %>
+			<form class="form-horizontal" action="schools.html">
+			  <%= form_for(@school, url: new_path) do |f| %>
 			
 				<!-- School ID field -->
     		<div class="row form-row">
