Container fixes for login and all other static pages. Also fixed content-col on logout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,10 @@
 </div>		<!-- end navbar -->
 </nav>
 
+<!-- Another note from Carolyn C: again, if you are working on a page that you see while NOT logged in, you need to manually add the container and the div associated.-->
+<% if logged_in? %>
 <div class="container">
+<% end %>
 	<!--Note from Carolyn C: If you are working on a page that you see when NOT logged in (excluding the login page), make sure to manually add the content the content col below -->
 	<% if logged_in? %>
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
@@ -60,7 +63,9 @@
 	<!--if not logged in -->
 	<%= yield %>
 	<% end %>
+<% if logged_in? %>
 </div>
+<% end %>
 <%= debug(params) if Rails.env.development? %>
 	
 	
