--- a/app/views/static_pages/about2.html.erb
+++ b/app/views/static_pages/about2.html.erb
@@ -1,3 +1,5 @@
+<!-- Another note from Carolyn C: again, if you are working on a page that you see while NOT logged in, you need to manually add the container and the div associated.-->
+<div class="container">
 <!--- Note from Carolyn C: all pages that are not logged (excluding the login screen) need this content col!-->
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		<div class="page-header vertical-align">
@@ -27,4 +29,5 @@
 			<p style="padding-bottom: 100px;"></p>
 		</div>   <!-- row -->
 	</div>
-</div>
+</div><!--end content-col-->
+</div><!-- end container -->
