--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -29,9 +29,10 @@
 
 <body>
 
-
+<!-- Another note from Carolyn C: again, if you are working on a page that you see while NOT logged in, you need to manually add the container and the div associated.-->
 <div class="container">
 	<div class="row">
+	    <!--Note from Carolyn C: If you are working on a page that you see when NOT logged in (excluding the login page), make sure to manually add the content the content col below -->
 		<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 
 			<!-- page header -->
