--- a/app/views/session_notes/index.html.erb
+++ b/app/views/session_notes/index.html.erb
@@ -1,3 +1,5 @@
+<!-- REMOVE AND PUT INTO SCRIPT FOLDER-->
+
 <script>
 $(function() {
   
@@ -17,6 +19,7 @@ $(function() {
   
 });
 </script>
+<!-- REMOVE ALL THIS SCRIPT AND PUT INTO SCRIPT FOLDER-->
 
 <!-- page header -->
 <div class="page-header vertical-align">
@@ -48,6 +51,7 @@ $(function() {
 <table class="table table-striped table-hover session_note-responsive session_note-table">
 	<thead>
 		<tr>
+			Figuring out how to make sessions id student
 			<th>Student</th>
 			<th>Note</th>
 			<th>Date</th>
@@ -57,13 +61,12 @@ $(function() {
 	  <%= will_paginate%>
 			<% @session_notes.each do |session_note| %>
 				<tr data-link=<%= edit_session_note_path(session_note.note) %>>
-					<td>
-						<div class="table-sq i-plum" title="<%= session_note.session_id %>"></div>
-					</td>
+					
+					<td><p class="listText"><%= session_note.session_id %></p></td>
 					<td><p class="listText"><%= truncate(session_note.note, :length => 80)%></p></td>
 					<td><p class="listText"><%= session_note.created_at %></p></td>
-					<td><p class="listText"><span></span></p>
-					</td>
+					<td><p class="listText"><span></span></p></td>
+					
 				</tr>
 			<% end %>
 		<%= will_paginate %>
