--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
+<!--Help page -->
+<!--By Steven Young --> 
 <html lang="en">
 <head>
 
@@ -28,7 +30,23 @@
 </head>
 
 <body>
-
+<nav class="navbar navbar-static-top">     <!-- start navbar -->
+	<div class="container">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+	</div>
+	<div id="navbar" class="collapse navbar-right navbar-collapse">
+		<ul class="nav navbar-nav ">
+			<li><a href="index.html">Back to login</a></li>
+		</ul>
+	</div>		
+</div>		<!-- end navbar -->
+</nav>
 
 <div class="container">
 	<div class="row">
@@ -50,23 +68,23 @@
             <div class="row">
                 <br>
                 <div class="col-xs-2 col-xs-offset-1 text-center">
-                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->
+                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->  <!-- commented out image... off center -->
                     <a href="#sessions">Sessions Help</a>
                 </div>
                 <div class="col-xs-2 col-xs-offset-1 text-center">
-                 <!--    <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->
+                 <!--    <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->   <!-- commented out image... off center -->
                     <a href="#Students">Students Help</a>
                 </div>
                 <div class="col-xs-2 col-xs-offset-1 text-center">
-                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->
+                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->    <!-- commented out image... off center -->
                     <a href="#Reports">Reports Help</a>
                 </div>
                 <div class="col-xs-2 col-xs-offset-1 text-center">
-                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->
+                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->   <!-- commented out image... off center -->
                     <a href="#Admin">Admin Help</a>
                 </div>
             </div>
-            <div class="row">
+            <div class="row">                          <!--Blank rows to ad space to page -->
                 <div class="col-lg-6"></div>
                 <!--Blank row -->
                 <div class="col-lg-6"></div>
@@ -82,14 +100,11 @@
                 <div class="col-lg-6"></div>
             </div>
         </div>
-        <!--End content col-->
-    </div>
+       
     <!--End Container Fluid-->
-    <!--       Start a new container???????   -->
-    <!-- <div class="container-fluid"> --
-    <div class="col-sm-10 col-sm-offset-1 content-col col-lg-8 col-lg-offset-1">
-        <div class="page-header">
-            <div class="col-xs-10 col-lg-offset-3 col-lg-6">-->
+    
+            
+            <!--Start text questions about sessions-->
 
     <div class="row">
         <a name="sessions" a style="text-decoration: none;">
@@ -111,6 +126,7 @@
         <br>
         <br>
     </div>
+    <!--Start text questions about Students-->
     <div class="row">
         <a name="Students" a style="text-decoration: none;">
             <center>
@@ -124,6 +140,7 @@
         <br>
         <br>
         <div class="col-lg-6"></div>
+        <!--Start text questions about reports-->
 
         <div class="row">
             <a name="Reports" a style="text-decoration: none;">
@@ -138,6 +155,7 @@
             <br>
             <div class="col-lg-6"></div>
             <!--Blank row -->
+            <!--Start text questions about admin-->
         </div>
         <div class="row">
             <a name="Admin" a style="text-decoration: none;">
@@ -159,6 +177,8 @@
             <div class="col-lg-6"></div>
         </div>
 
+    </div>
+     <!--End content col-->
     </div>
     <!--End content col-->
 
