--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -17,22 +17,32 @@
 
 		<!-- page content, just text -->
 		<div class="row content-text">
-			<br>
-			<p>
-				Part 1: Describe Dinner Out. What it does. And how it was created.
-				<br><br>
-			</p>
-			<p>
-				Part 2: Thank you Turning Pointe and others. 
-				<br><br>
-			</p>
-			<p>
-				Part 3: Authors. Dinner Out is the creation of... Capstone2017 student profiles. (smile)
-			</p>
-
-			<!-- bottom padding for demo only -->
-			<p style="padding-bottom: 100px;"></p>
-		</div>   <!-- row -->
+			<div class="col-xs-12">
+				<p>
+					<!--Part 1: Describe Dinner Out. What it does. And how it was created.-->
+					Dinner Out is a web application designed to make behavior tracking easier for teachers and aides. 
+					Easily enter behavior data in real time at the press of a button and generate reports quickly.
+					We make tracking and analytics easier so you can focus on what's important, your students. 
+				</p>
+			</div>
+		</div>
+		<div class="row content-text">
+			<div class="col-xs-12">
+				<p>
+					<!--Part 2: Thank you Turning Pointe and others. -->
+					We would like to extend our thanks to <a href="http://www.turningpointeautismfoundation.org/" target="_blank">Turning Pointe Autism Foundation</a> for providing their expertise and willingness to help
+					with this project. In particular we would like to thank Carrie Provenzale, Bianca Edmeier, and Stefan Krueger for their help with this project.
+				</p>
+			</div>
+		</div>
+		<div class="row content-text">
+			<div class="col-xs-12">
+				<p>
+					<!--Part 3: Authors. Dinner Out is the creation of... Capstone2017 student profiles. (smile)-->
+					Dinner Out is the creation of the 2017 Computer Science Capstone class at <a href="northcentralcollege.edu">North Central College</a>. 
+				</p>
+			</div>
+		</div>
 	</div> <!--content col-->
 		
 
