Now there are 3 navbar options instead of one.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<footer class="header">
+<header class="header">
 	<%= csrf_meta_tags %>
 
 	<!-- 1. Meta tags: The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
