--- a/app/views/static_pages/about2.html.erb
+++ b/app/views/static_pages/about2.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/navbar3' %>
 <!-- Another note from Carolyn C: again, if you are working on a page that you see while NOT logged in, you need to manually add the container and the div associated.-->
 <div class="container">
 <!--- Note from Carolyn C: all pages that are not logged (excluding the login screen) need this content col!-->
