--- a/app/views/layouts/_navbar3.html.erb
+++ b/app/views/layouts/_navbar3.html.erb
@@ -12,7 +12,7 @@
 	</div>
         <div id="navbar" class="collapse navbar-right navbar-collapse">
 		    <ul class="nav navbar-nav ">
-		    <li><a href="login.html"><span class="fa fa-sign-in"></span> Login</a></li>
+		    <li><a href="login.html"><span class="fa fa-sign-in"></span> Back to Login</a></li>
 		</ul>
 	</div>		<!-- end nav-collapse -->
 </div>		<!-- end navbar -->
