--- a/app/views/login_session/logout.html.erb
+++ b/app/views/login_session/logout.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/navbar3' %>
 <div class="container">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">	
 		<div class="page-header vertical-align">
