--- a/app/views/layouts/_navbar1.html.erb
+++ b/app/views/layouts/_navbar1.html.erb
@@ -10,43 +10,20 @@
 			<span class="icon-bar"></span>
 		</button>
 		<!--<a class="navbar-brand" href="">Dinner Out</a>-->
-		<%= link_to about1_path, class: "navbar-brand" do%>
-		<span class="glyphicon glyphicon-home"></span>
-  		Dinner Out
-		<% end %>
+		<%= link_to home_path, class: "navbar-brand" do%><span class="fa fa-home fa-fw"></span>Dinner Out<% end %>
 	</div>
 	<div id="navbar" class="collapse navbar-right navbar-collapse">
 		<ul class="nav navbar-nav ">
-				<li><%= link_to help_path :class =>"navIcon" do %>
-  				<span class="fa fa-h-square"></span>
-  				Help
-				<% end %>
-				</li>
+				<li><%= link_to help_path :class =>"navIcon" do %><span class="fa fa-h-square fa-fw"></span>Help<% end %></li>
 				
 				<!-- Note from Carolyn C: Navbar Icons mixed with Ruby on Rails: Source:http://stackoverflow.com/questions/4837824/can-i-use-a-link-to-to-generate-a-link-with-a-span-inside -->
-				<li><%= link_to admin_path :class =>"navIcon" do %>
-  				<span class="fa fa-font"></span>
-  				Admin
-				<% end %>
-				</li>
+				<li><%= link_to admin_path :class =>"navIcon" do %><span class="fa fa-font fa-fw"></span>Admin<% end %></li>
 				
-				<li><%= link_to super_path :class =>"navIcon" do %>
-  				<span class="fa fa-superpowers"></span>
-  				Super
-				<% end %>
-				</li>
+				<li><%= link_to super_path :class =>"navIcon" do %><span class="fa fa-superpowers fa-fw"></span>Super<% end %></li>
 				
-				<li><%= link_to teachers_path :class =>"navIcon" do %>
-				<span class="fa fa-user-circle"></span>
-  				Profile
-				<% end %>
-				</li>
+				<li><%= link_to teachers_path :class =>"navIcon" do %><span class="fa fa-user-circle fa-fw"></span>Profile<% end %></li>
 				
-				<li><%= link_to logout_path :class =>"navIcon" do %>
-				<span class="fa fa-sign-out"></span>
-  				Logout
-				<% end %>
-				</li>
+				<li><%= link_to logout_path :class =>"navIcon" do %><span class="fa fa-sign-out fa-fw"></span>Logout<% end %></li>
 		</ul>
 	</div>		<!-- end nav-collapse -->
 </div>		<!-- end navbar -->
