--- a/app/views/layouts/_navbar2.html.erb
+++ b/app/views/layouts/_navbar2.html.erb
@@ -12,7 +12,7 @@
 	</div>
         <div id="navbar" class="collapse navbar-right navbar-collapse">
 		    <ul class="nav navbar-nav ">
-		    <li><a href="about1.html"><span class="fa fa-file-text"></span> About</a></li>
+		    <li><a href="about1.html"><span class="fa fa-info-circle fa-fw"></span> About</a></li>
 		</ul>
 	</div>		<!-- end nav-collapse -->
 </div>		<!-- end navbar -->
