--- a/app/views/session_notes/index.html.erb
+++ b/app/views/session_notes/index.html.erb
@@ -1,7 +1,5 @@
-<!-- REMOVE AND PUT INTO SCRIPT FOLDER-->
-
 <script>
-$(function() {
+	$(function() {
   
   // contact form animations
   $('#newNote').click(function() {
@@ -9,7 +7,6 @@ $(function() {
   })
   $(document).mouseup(function (e) {
     var container = $("#newNoteForm");
-
     if (!container.is(e.target) // if the target of the click isn't the container...
         && container.has(e.target).length === 0) // ... nor a descendant of the container
     {
@@ -19,7 +16,6 @@ $(function() {
   
 });
 </script>
-<!-- REMOVE ALL THIS SCRIPT AND PUT INTO SCRIPT FOLDER-->
 
 <!-- page header -->
 <div class="page-header vertical-align">
@@ -36,9 +32,16 @@ $(function() {
 
 
 <!--New Note-->
+<div class="row first-content-row">
+	<div class="col-xs-3">
+		<p><%= notice %></p>
+    	<div class ="col-sm-offset-1 btn btn-lg btn-success">
+    	<div id = "newNote">New Note</div>
+    	</div>
+	</div><!--End col-->
+</div><!--End row -->
 
-<div id="newNote">New Note</div>
-
+<!-- This is the note that will be appearing -->
 <div id="newNoteForm">
   <h1>Add a new Note</h1>  
 	<%= form_for @session_note, url: {action: "create"}, html: {class: "nifty_form"} do |f| %>
@@ -48,10 +51,9 @@ $(function() {
 	<% end %>
 </div>
 
-<table class="table table-striped table-hover session_note-responsive session_note-table">
+<table class="table table-striped table-hover table-responsive teachers-table">
 	<thead>
 		<tr>
-			Figuring out how to make sessions id student
 			<th>Student</th>
 			<th>Note</th>
 			<th>Date</th>
@@ -61,12 +63,10 @@ $(function() {
 	  <%= will_paginate%>
 			<% @session_notes.each do |session_note| %>
 				<tr data-link=<%= edit_session_note_path(session_note.note) %>>
-					
 					<td><p class="listText"><%= session_note.session_id %></p></td>
 					<td><p class="listText"><%= truncate(session_note.note, :length => 80)%></p></td>
 					<td><p class="listText"><%= session_note.created_at %></p></td>
 					<td><p class="listText"><span></span></p></td>
-					
 				</tr>
 			<% end %>
 		<%= will_paginate %>
