--- a/app/assets/stylesheets/session_notes.scss
+++ b/app/assets/stylesheets/session_notes.scss
@@ -6,7 +6,7 @@
 /***********************************************************
 * Home CSS Stylesheet Document 
 * Contains styling specific to the home page
-* Written by: Rolando MEDRANo
+* Written by: Rolando Medrano
 ************************************************************/
 
 #newNoteForm { 
