Fixed about page content to only include last initials

--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -31,7 +31,7 @@
 				<p>
 					<!--Part 2: Thank you Turning Pointe and others. -->
 					We would like to extend our thanks to <a href="http://www.turningpointeautismfoundation.org/" target="_blank">Turning Pointe Autism Foundation</a> for providing their expertise and willingness to help
-					with this project. In particular we would like to thank Carrie Provenzale, Bianca Edmeier, and Stefan Krueger for their help with this project.
+					with this project. In particular we would like to thank Carrie P, Bianca E, and Stefan K for their help with this project.
 				</p>
 			</div>
 		</div>
