--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -40,7 +40,7 @@
 			<label for="student<%= student.id %>">
 				<div class="image-radio" id="<%= student.id %>">
 		      <div class ="square i-<%= student.color %> center-block">
-		          <span class="fa fa-<%= student.icon %> fa-5x student-icon home-center"></span>
+		          <span class="fa fa-<%= student.icon %> fa-5x student-icon center-block"></span>
 		      </div>
 	      </div>
       </label>
