added super 3 4 5 pages

--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -52,7 +52,7 @@
 	</div> <!-- col -->
 	<% end %>
 	
-	<%= link_to roster_squares_path(@current_teacher) do %>
+	<%= link_to squares_path(@current_teacher) do %>
 	<div class="col-xs-2 text-center" title="View/edit all behavior squares">
 	<div class ="action-sq i-ltblue center-block" >
 		<span class="fa fa-square-o fa-4x action-icon" ></span>
