--- a/app/views/schools/super.html.erb
+++ b/app/views/schools/super.html.erb
@@ -61,24 +61,30 @@
 
 		<!-- action icons, row 2 -->
 		<div class="row action-icon-row" style="margin-top: 40px;">
+			<%= link_to backup_path(@schools) do %>
 			<div class="col-xs-2 col-xs-offset-1 text-center" title="Backup all data of Super's focus school">
 				<div class ="action-sq i-green center-block" >
-					<a href="super3.html"><span class="fa fa-floppy-o fa-4x action-icon" ></span></a>
+					<span class="fa fa-floppy-o fa-4x action-icon" ></span>
 				</div>
-				<p><a href="super3.html"><span class="student-icon-text">Backup school</span></a></p>
+				<p><span class="student-icon-text">Backup school</span></p>
 			</div> <!-- col -->
+			<% end %>
+			<%= link_to suspend_path(@schools) do %>
 			<div class="col-xs-2 text-center" title="Suspend all teacher logins of Super's focus school">
 				<div class ="action-sq i-red center-block">
-					<a href="super4.html"><span class="fa fa-bomb fa-4x action-icon"></span></a>
+					<span class="fa fa-bomb fa-4x action-icon"></span>
 				</div>
-				<p><a href="super4.html"><span class="student-icon-text">Suspend school</span></a></p>
+				<p><span class="student-icon-text">Suspend school</span></p>
 			</div><!-- col -->
+			<% end %>
+			<%= link_to restore_path(@schools) do %>
 			<div class="col-xs-2 text-center" title="Restore all teacher logins of Super's focus school">
 				<div class ="action-sq i-yellow center-block">
-					<a href="super5.html"><span class="fa fa-undo fa-4x action-icon"></span></a>
+					<span class="fa fa-undo fa-4x action-icon"></span>
 				</div>
-				<p><a href="super5.html"><span class="student-icon-text">Restore school</span></a></p>
+				<p><span class="student-icon-text">Restore school</span></p>
 			</div><!-- col -->
+			<% end %>
 		</div><!-- row -->
 
 	</div><!--End content col-->
