make session display on student index

--- a/app/views/schools/super.html.erb
+++ b/app/views/schools/super.html.erb
@@ -1,41 +1,91 @@
 <!-- Robert Herrera -->
-<p id="notice"><%= notice %></p>
-
-<!-- page header -->
-	<div class="page-header vertical-align">
+<div class="container">
+	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
+		<!-- page header -->
+		<div class="page-header vertical-align">
 			<div class="col-xs-11">
-				<h2>Super Dashboard<small> - manage schools at TPTE</small></h2><!-- Dynamically fills in with school id -->
+				<h2>Super Dashboard<small> - create and manage schools using super powers</small></h2><!-- Dynamically fills in with school id -->
 			</div>
 			<div class="col-xs-1 center-block">
-				<div class="header-sq i-plum" title="Bianca17">
-					<span class="fa fa-apple fa-3x teacher-icon"></span>
+				<div class="header-sq i-red" title="Prof Bill is Super User">
+					<span class="fa fa-flash fa-3x teacher-icon"></span>
 				</div>
 			</div>
+		</div><!--End page header-->
+		<!-- school focus spinner -->
+		<div class="row first-content-row">
+			<form class="form-horizontal">
+				<div class="row vertical-align">
+					<div class="form-group">
+						<label class="control-label col-xs-5" for="selectSch">Super focus school:</label>
+						<div class="col-xs-7">
+							<!-- LIST OF SCHOOLS -->
+							<!-- submits HTTP Post request to the super_controller. The super_controller determines which action to use. -->
+							 <form action="/super" method="post">
+									<select required>
+										<% @schools.each do |school| %>
+											<option name ="<%= school.full_name %>" value="<%= school.full_name %>"><%= school.full_name %></option>
+								   		<% end %>
+									</select> 
+							</form>
+						</div>   <!-- col-->
+						<div class="col-xs-4 text-center">
+							<button type="submit" class="btn btn-md btn-success">Change focus school</button>
+						</div>   <!-- col -->
+	  			</div>   <!-- form group-->
+				</div>   <!-- row -->
+				<div class="row">
+				</div>   <!-- row -->
+			</form>
 		</div>
-<!--End page header-->
-<tbody>
-	<!-- submits HTTP Post request to the super_controller. The super_controller determines which action to use. -->
-	 <form action="/super" method="post">
-	 
-			<select required>
-				<% @schools.each do |school| %>
-					<option name ="<%= school.full_name %>" value="<%= school.full_name %>"><%= school.full_name %></option>
-		   		<% end %>
-			</select> 
-	   <input type="submit" value="Change Focus School">
-	</form>
-</tbody>
+		<!-- action icons -->
+		<div class="row action-icon-row" style="margin-top: 40px;">
+			<%= link_to schools_path(@schools) do %>
+			<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit schools">
+				<div class ="action-sq i-navy center-block" >
+					<span class="fa fa-home fa-4x action-icon" ></span>
+				</div>
+				<p><span class="student-icon-text">All Schools</span></p>
+			<% end %>
 
-<br>
+			</div> <!-- col -->
+			<%= link_to super_report_path(@schools) do %>
+			<div class="col-xs-2 text-center" title="Stats++ for the Super User">
+				<div class ="action-sq i-pink center-block">
+					<span class="fa fa-file-text fa-4x action-icon"></span>
+				</div>
+				<p><span class="student-icon-text">Super Report</span></p>
+			</div><!-- col -->
+			<% end %>
+		</div><!-- row -->
 
-	<div class="table-sq " >
-		<span class="fa fa-home fa-3x"></span>  <!--Always the Bootstrap glyph school Icon-->
-	</div>
-	
-<%= link_to 'All Schools', schools_path, class: "btn btn-success" %>
+		<!-- action icons, row 2 -->
+		<div class="row action-icon-row" style="margin-top: 40px;">
+			<%= link_to backup_path(@schools) do %>
+			<div class="col-xs-2 col-xs-offset-1 text-center" title="Backup all data of Super's focus school">
+				<div class ="action-sq i-green center-block" >
+					<span class="fa fa-floppy-o fa-4x action-icon" ></span>
+				</div>
+				<p><span class="student-icon-text">Backup school</span></p>
+			</div> <!-- col -->
+			<% end %>
+			<%= link_to suspend_path(@schools) do %>
+			<div class="col-xs-2 text-center" title="Suspend all teacher logins of Super's focus school">
+				<div class ="action-sq i-red center-block">
+					<span class="fa fa-bomb fa-4x action-icon"></span>
+				</div>
+				<p><span class="student-icon-text">Suspend school</span></p>
+			</div><!-- col -->
+			<% end %>
+			<%= link_to restore_path(@schools) do %>
+			<div class="col-xs-2 text-center" title="Restore all teacher logins of Super's focus school">
+				<div class ="action-sq i-yellow center-block">
+					<span class="fa fa-undo fa-4x action-icon"></span>
+				</div>
+				<p><span class="student-icon-text">Restore school</span></p>
+			</div><!-- col -->
+			<% end %>
+		</div><!-- row -->
 
-	<div class="table-sq " >
-		<span class="fa fa-home fa-3x"></span>  <!--Always the Bootstrap glyph school Icon-->
-	</div>
-	
-<%= link_to 'Super Report', super_report_path, class: "btn btn-success" %>
+	</div><!--End content col-->
+</div><!--End container-->
