--- a/app/views/layouts/_profile_teacher_version.html.erb
+++ b/app/views/layouts/_profile_teacher_version.html.erb
@@ -1,17 +1,9 @@
-<!--Adapted for use by Kevin M. -->
-<div class="page-header cap17-header vertical-align">
-	<div class="col-xs-11">
-		<h2>New Teacher <small>- add a new teacher to TPTE</small></h2>
-	</div>
-	<%= render 'layouts/current_teacher_icon' %>
-</div>
-
-<!-- Teacher profile area -->
+<!--This is the teacher version of the profile view. They can't change too much,
+    but just enough.-->
 <%= form_for(@teacher) do |f| %>
   <% if @teacher.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
-
       <ul>
       <% @teacher.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -19,15 +11,12 @@
       </ul>
     </div>
   <% end %>
-  
-	<!-- school_id fetched from admin -->
-	<%= f.hidden_field :school_id, :value => current_teacher.school_id %>
-	
+
 	<div class="row form-row">
 		<!-- Teacher ID -->
 		<div class="col-sm-2 col-sm-offset-1"><h4> Teacher ID: </h4></div>
 		<div class="col-sm-2">
-			<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
+			<%= f.text_field :user_name, class: 'form-control', id: 'teacherID', :readonly => true %>
 		</div>
 	</div>
 	
@@ -35,15 +24,15 @@
 	<div class="row form-row">
 	<div class="col-xs-1 col-xs-offset-1"><h4>Name: </h4></div>
 	<div class="col-xs-4 col-xs-offset-1">
-			<%= f.text_field :full_name, class: 'form-control', id: 'teacherName' %>
+			<%= f.text_field :full_name, class: 'form-control', id: 'teacherName', :readonly => true %>
 		</div>
 	</div>   <!-- row -->
 	
-  <!-- Teacher screen_name field -->
+	<!-- Teacher screen_name field -->
 	<div class="row form-row">
 	<div class="col-xs-1 col-xs-offset-1"><h4>Short Name: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
+			<%= f.text_field :screen_name, class: 'form-control', :readonly => true %>
 		</div>
 	</div>   <!-- row -->
 	
@@ -56,34 +45,19 @@
 		</div>
 	</div>
 	
-	<!-- Teacher password -->
-	<div class="row form-row">
-		<div class="col-sm-offset-1 col-sm-2"><h4>Password: </h4></div>
-
-		<div class="col-sm-4 col-sm-offset-0">
-			<%= f.password_field :password, class: 'form-control'%>
-		</div>
-	</div>
-	
-	<div class="row form-row">
-		<div class="col-sm-offset-1 col-sm-2"><h4>Confirm Password: </h4></div>
-
-		<div class="col-sm-4 col-sm-offset-0">
-			<%= f.password_field :password_confirmation, class: 'form-control'%>
-		</div>
-	</div>
-	
 	<!--Teacher Admin -->
 	<div class="row form-row vertical-align">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Access: </h4></div>
 	    <div class="col-sm-4 col-sm-offset-0">
-  			<%= f.select :powers, options_for_select([
-  			"SessionOnly", 
-  			"Teacher", 
-  			"Admin"]), 
-  			class: 'form-control' %>
+  			<h4> <%= @teacher.powers %> </h4>
   		</div>
 	</div>
+	
+	<!--Unfortunately, there's no 'readonly' form of select, so we're doing it 
+	    this way--with a hidden field!
+	    This is totally unsafe, by the way. We're only doing it this way because
+	    we trust our users... right?-->
+	<%= f.hidden_field :powers, :value => @teacher.powers %>
 	
 	<!-- a little extra space after name/email -->
 	<div class="form-spacer">	&nbsp;</div>
@@ -92,8 +66,16 @@
 		<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
 	
 		<div class="col-sm-4 col-sm-offset-0">
-			<%= f.select :color, options_for_select(colorNames), 
-			class: 'form-control' %>
+			<!--A roundabout way of making ltblue display as light blue.-->
+			<% if @teacher.color == 'ltblue' %>
+				<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
+				class: 'form-control' %>
+			<% end %>
+			
+			<!--Otherwise, the value is drawn naturally from the model entry. -->
+			<% if @teacher.color != 'ltblue' %>
+				<%= f.select :color, colorNames, class: 'form-control' %>
+			<% end %>
 		</div>
 	</div>
 	
@@ -101,8 +83,7 @@
 	<div class="row form-row">
 		<div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.select :icon, options_for_select(teacherIcons), 
-			class: 'form-control' %>
+			<%= f.select :icon, teacherIcons, class: 'form-control' %>
 		</div>
 	</div>
 	
@@ -118,14 +99,12 @@
 		<div class="col-sm-1 col-sm-offset-1"><br></div>
 	</div>
 	
-	<!--One button is in the form, one is out-- it's because the cancel button is
-	    just a link to return, while the add button is the submit.-->
 	<div class="row action-buttons-row">
 		<div class="col-sm-1 col-sm-offset-1"> 
-			<%= f.submit "Add New Teacher", class: "btn btn-success" %>
+			<%= f.submit "Save Changes", class: "btn btn-success" %>
 		</div>
 <% end %>
-	<div class="col-sm-1 col-sm-offset-1"> 
-		<%= button_to "Cancel", teachers_path, :class => "btn btn-danger", :method => :get %>
-	</div>
-</div>
+  <div class="col-sm-1 col-sm-offset-1"> 
+  		<%= button_to "Cancel", teachers_path, :class => "btn btn-danger", :method => :get %>
+  	</div>
+  </div> 
