limited student+squares to admin

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,5 +1,6 @@
 <!--Ricky Perez & Michael Loptien-->
 
+<!-- Error Catching -->
 <%= form_for(student) do |f| %>
   <% if student.errors.any? %>
     <div id="error_explanation">
